--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
   <title>Paperclip 📎</title>
-</head>
+</head><h1 class="w-1/2 text-1xl text-left m-10">
 
 <body style="background-color:f8f8f8;">
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <h1> <strong> Welcome to Paperclip 📎 </strong> </h1>
+    <h1 class="w-1/2 text-1xl text-left m-10"> <strong> Welcome to Paperclip 📎 </strong> </h1>
     <p> For knowledge seekers searching for their next read, listen, or view, <br>
         Paperclip is a web application for friends, families, co-workers, and influencers <br>
         that provides an effortless and non-disruptive solution to sharing and receiving relevant and interesting
         content.
     </p>
-    <h3>
+    <h3 class="w-1/2 text-1xl text-left m-10">
         <strong> <a href="about.html">About </a> | <a href="howitworks.html">How it works </a> | <a
                 href="install.html">Install </a> </strong>
     </h3>
