--- a/index.html
+++ b/index.html
@@ -7,20 +7,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
   <title>Paperclip 📎</title>
-</head><h1 class="w-1/2 text-1xl text-left m-10">
+</head>
 
 <body style="background-color:f8f8f8;">
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <h1 class="w-1/2 text-1xl text-left m-10"> <strong> Welcome to Paperclip 📎 </strong> </h1>
-    <p> For knowledge seekers searching for their next read, listen, or view, <br>
-        Paperclip is a web application for friends, families, co-workers, and influencers <br>
-        that provides an effortless and non-disruptive solution to sharing and receiving relevant and interesting
-        content.
-    </p>
-    <h3 class="w-1/2 text-1xl text-left m-10">
-        <strong> <a href="about.html">About </a> | <a href="howitworks.html">How it works </a> | <a
-                href="install.html">Install </a> </strong>
-    </h3>
+    <br><br><br><br><br><br><br>
+    <h1 class="text-6xl text-center"> <strong> Welcome to Paperclip 📎 </strong> </h1>
+    <h1 class="text-1xl text-center m-2"> an automated newsletter for friends, families, and co-workers </h1> <br>
+
+    <div class="flex text-center mt-1">
+        <div class="w-1/2 ml-20 rounded-full px-4 py-2 bg-purple-500 text-white font-bold text-1xl"><a href="install.html">Install </a></div>
+        <div class="w-1/3 text-2xl"> // </div>
+        <div class="w-1/2 mr-20 rounded-full px-4 py-2 bg-purple-500 text-white font-bold text-1xl"><a href="howitworks.html">About </a></div>
+      </div>
+
+
+    <div class="flex text-center m-20">
+        <div class="w-1/3 text-3xl font-bold">Friends</div>
+        <div class="w-1/3 text-3xl font-bold">Family</div>
+        <div class="w-1/3 text-3xl font-bold">Co-Workers</div>
+      </div>
+
+    <div class="m-10 w-3/4">
+        <form netlify>
+            <label class="ml-10 block font-bold text-left" for="email">Your Email</label>
+            <input class="ml-10 item-center p-2 w-1/4 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+            focus:border-purple-500" type="text" id="email" name="email">
+            <button class="m-10 block text-white bg-purple-500 rounded px-4 py-2">Join Waitlist</button>
+        </form>
+    </div>  
+
 </body>
 
 </html>
