--- a/index.html
+++ b/index.html
@@ -10,31 +10,34 @@
 </head>
 
 <body style="background-color:f8f8f8;">
+    <h1 class="rounded-full text-right mr-20 pt-2 font-light text-1xl"><a href="howitworks.html">About </a> </h1> <br>
     <br><br><br><br><br><br><br>
     <h1 class="text-6xl text-center"> <strong> Welcome to Paperclip 📎 </strong> </h1>
-    <h1 class="text-1xl text-center m-2"> an automated newsletter for friends, families, and co-workers </h1> <br>
+    <h1 class="text-1xl text-center m-2"> an automated newsletter for friends, families, and co-workers </h1>
+    <h1 class="w-full underline rounded-full px-4 py-2 text-center font-light text-1xl"><a href="install.html">Already a member? </a> </h1> <br>
 
     <div class="flex text-center mt-1">
-        <div class="w-1/2 ml-20 rounded-full px-4 py-2 bg-purple-500 text-white font-bold text-1xl"><a href="install.html">Install </a></div>
-        <div class="w-1/3 text-2xl"> // </div>
-        <div class="w-1/2 mr-20 rounded-full px-4 py-2 bg-purple-500 text-white font-bold text-1xl"><a href="howitworks.html">About </a></div>
+        <div class="w-1/8 ml-10 "></div>
+        <div class="w-full">
+            <form netlify>
+                <input class="p-2.5 border border-gray-400 rounded-full shadow-xl focus:outline-none focus:ring-purple-500
+                focus:border-purple-500" type="text" id="email" name="email">
+                <button class="lock text-white font-bold bg-purple-500 rounded-full px-4 py-2.5">Join Waitlist</button>
+            </form>
+        </div>  
+        <div class="w-1/8 mr-10"></div>
       </div>
+
 
 
     <div class="flex text-center m-20">
-        <div class="w-1/3 text-3xl font-bold">Friends</div>
-        <div class="w-1/3 text-3xl font-bold">Family</div>
-        <div class="w-1/3 text-3xl font-bold">Co-Workers</div>
+        <div class="w-1/3 m-1 text-3xl font-bold">Friends
+         <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/friends.png> </div>
+        <div class="w-1/3 m-1 text-3xl font-bold">Family
+        <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/fam.png> </div>
+        <div class="w-1/3 m-1 text-3xl font-bold">Co-Workers
+        <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/work.png> </div>
       </div>
-
-    <div class="m-10 w-3/4">
-        <form netlify>
-            <label class="ml-10 block font-bold text-left" for="email">Your Email</label>
-            <input class="ml-10 item-center p-2 w-1/4 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
-            focus:border-purple-500" type="text" id="email" name="email">
-            <button class="m-10 block text-white bg-purple-500 rounded px-4 py-2">Join Waitlist</button>
-        </form>
-    </div>  
 
 </body>
 
