--- a/howitworks.html
+++ b/howitworks.html
@@ -1,25 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paperclip 📎</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
+  <title> 📎 </title>
 </head>
 
 <body style="background-color:f8f8f8;">
-    <h1> <strong> How Paperclip works 📎 </strong> </h1>
-    <ul>
-        <li> Create Paperclip group </li>
-        <li> Invite friends </li>
-        <li> Install Chrome Extension </li>
-        <li> Select destination group </li>
-        <li> Save content </li>
-        <li> Receive email newsletter </li>
-    </ul>
-
+    <h3 class="rounded-full text-right mr-20 pt-2 font-light text-1xl"> <a href="index.html">Home </a> </strong></h3>
+    <h1 class="font-bold text-4xl text-center p-10"> How Paperclip works 📎 </h1>
+    <div class="list-disc text-1xl text-left m-10">
+        <div> #1. Create Paperclip group </div>
+        <div> #2. Invite friends </div>
+        <div> #3. Install Chrome Extension </div>
+        <div> #4. Select destination group </div>
+        <div> #5. Save content </div>
+        <div> #6. Receive email newsletter </div>
+    </div>
+<div class="text-center">
     <img src="/Users/ramanmalik/Documents/Paperclip_howitworks_img.png" alt="Paperclip How-to">
-    <h3> <strong> <a href="index.html">Go back home </a> </strong></h3>
+</div>
 </body>
 
 </html>
