--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
         </div>  
         <div class="w-1/8 mr-10"></div>
       </div>
-
-
-
-    <div class="flex text-center m-20">
-        <div class="w-1/3 m-1 text-3xl font-bold">Friends
+      <br>
+      <br>
+    <div class="flex text-center m-40">
+        <div class="w-1/3 m-10 text-3xl font-light">Friends <br><br>
          <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/friends.png> </div>
-        <div class="w-1/3 m-1 text-3xl font-bold">Family
+        <div class="w-1/3 m-10 text-3xl font-light">Family <br><br>
         <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/fam.png> </div>
-        <div class="w-1/3 m-1 text-3xl font-bold">Co-Workers
+        <div class="w-1/3 m-10 text-3xl font-light">Co-Workers <br><br>
         <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/work.png> </div>
       </div>
 
