--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
     <br><br><br><br><br><br><br>
     <h1 class="text-6xl text-center"> <strong> Welcome to Paperclip 📎 </strong> </h1>
     <h1 class="text-1xl text-center m-2"> an automated newsletter for friends, families, and co-workers </h1>
+    <h1 class="text-1xl text-center font-light m-2"> launching february 2021 </h1>
     <h1 class="w-full underline rounded-full px-4 py-2 text-center font-light text-1xl"><a href="install.html">Already a member? </a> </h1> <br>
 
-    <div class="flex text-center mt-1">
-        <div class="w-1/8 ml-10 "></div>
+    <div class="md-flex text-center mt-1">
+        <div class="w-1/3 ml-10 "></div>
         <div class="w-full">
             <form netlify>
-                <input class="p-2.5 border border-gray-400 rounded-full shadow-xl focus:outline-none focus:ring-purple-500
+                <input class="w-1/3 p-2.5 border border-gray-400 rounded-full shadow-xl focus:outline-none focus:ring-purple-500
                 focus:border-purple-500" type="text" id="email" name="email">
                 <button class="lock text-white font-bold bg-purple-500 rounded-full px-4 py-2.5">Join Waitlist</button>
             </form>
         </div>  
-        <div class="w-1/8 mr-10"></div>
+        <div class="w-1/3 mr-10"></div>
       </div>
       <br>
       <br>
-    <div class="flex text-center m-40">
-        <div class="w-1/3 m-10 text-3xl font-light">Friends <br><br>
-         <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/friends.png> </div>
+    <div class="flex w-full text-center">
+        <div class="w-1/3 m-10 text-3xl font-light item-center">Friends <br><br>
+         <img src=/Users/ramanmalik/code/hw2/friends.png> </div>
         <div class="w-1/3 m-10 text-3xl font-light">Family <br><br>
-        <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/fam.png> </div>
+        <img src=/Users/ramanmalik/code/hw2/fam.png> </div>
         <div class="w-1/3 m-10 text-3xl font-light">Co-Workers <br><br>
-        <img src=/Users/ramanmalik/Documents/Classes/kiei_coding/work.png> </div>
+        <img src=/Users/ramanmalik/code/hw2/work.png> </div>
       </div>
 
 </body>
