--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 
 <body style="background-color:f8f8f8;">
-    <h1 class="rounded-full text-right mr-20 pt-2 font-light text-1xl"><a href="howitworks.html">About </a> </h1> <br>
+    <div class="flex w-full">
+      <div class="w-1/3 rounded-full text-left ml-10 pt-2 font-bold text-2xl"><a href="index.html">Paperclip 📎 </a> </div> 
+      <div class="w-1/3 rounded-full text-right mr-20 pt-2 font-light text-1xl"></div> 
+      <div class="w-1/3 rounded-full text-right mr-20 pt-2 font-bold text-1xl"><a href="howitworks.html">About </a> </div> 
+    </div>
     <br><br><br><br><br><br><br>
     <h1 class="text-6xl text-center"> <strong> Welcome to Paperclip 📎 </strong> </h1>
     <h1 class="text-1xl text-center m-2"> an automated newsletter for friends, families, and co-workers </h1>
-    <h1 class="text-1xl text-center font-light m-2"> launching february 2021 </h1>
     <h1 class="w-full underline rounded-full px-4 py-2 text-center font-light text-1xl"><a href="install.html">Already a member? </a> </h1> <br>
     <div class="md-flex text-center mt-1">
         <div class="w-1/3 ml-10 "></div>
@@ -29,7 +32,7 @@
       </div>
       <br>
       <br>
-    <div class="flex w-full text-center">
+    <div class="flex w-full text-center h-20">
         <div class="w-1/3 m-10 text-3xl font-light item-center">Friends <br><br>
          <img src=/Users/ramanmalik/code/hw2/friends.png> </div>
         <div class="w-1/3 m-10 text-3xl font-light">Family <br><br>
