--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <br>
       <br>
-    <div class="flex w-full text-center h-20">
+    <div class="flex w-full text-center">
         <div class="w-1/3 m-10 text-3xl font-light item-center">Friends <br><br>
          <img src=/Users/ramanmalik/code/hw2/friends.png> </div>
         <div class="w-1/3 m-10 text-3xl font-light">Family <br><br>
