--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <br>
     <div class="flex w-full text-center">
         <div class="w-1/3 m-10 text-3xl font-light item-center">Friends <br><br>
-         <img src=/Users/ramanmalik/code/hw2/friends.png> </div>
+         <img src=friends.png> </div>
         <div class="w-1/3 m-10 text-3xl font-light">Family <br><br>
-        <img src=/Users/ramanmalik/code/hw2/fam.png> </div>
+        <img src=fam.png> </div>
         <div class="w-1/3 m-10 text-3xl font-light">Co-Workers <br><br>
-        <img src=/Users/ramanmalik/code/hw2/work.png> </div>
+        <img src=work.png> </div>
       </div>
 
 </body>
