--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body style="background-color:f8f8f8;">
     <div class="flex w-full">
-      <div class="w-1/3 rounded-full text-left ml-10 pt-2 font-bold text-2xl"><a href="index.html">Paperclip 📎 </a> </div> 
-      <div class="w-1/3 rounded-full text-right mr-20 pt-2 font-light text-1xl"></div> 
-      <div class="w-1/3 rounded-full text-right mr-20 pt-2 font-bold text-1xl"><a href="howitworks.html">About </a> </div> 
+      <div class="w-1/3 text-left ml-5 pt-2 font-bold text-1xl"><a href="index.html">Paperclip 📎 </a> </div> 
+      <div class="w-1/3 text-right pt-2 font-light text-1xl"></div> 
+      <div class="w-1/3 text-right mr-10 pt-2 font-bold text-1xl"><a href="howitworks.html">About </a> </div> 
     </div>
     <br><br><br><br><br><br><br>
     <h1 class="text-6xl text-center"> <strong> Welcome to Paperclip 📎 </strong> </h1>
     <h1 class="text-1xl text-center m-2"> an automated newsletter for friends, families, and co-workers </h1>
     <h1 class="w-full underline rounded-full px-4 py-2 text-center font-light text-1xl"><a href="install.html">Already a member? </a> </h1> <br>
     <div class="md-flex text-center mt-1">
-        <div class="w-1/3 ml-10 "></div>
+        <div class="w-1/3 ml-10"></div>
         <div class="w-full">
             <form netlify>
                 <input class="w-1/3 p-2.5 border border-gray-400 rounded-full shadow-xl focus:outline-none focus:ring-purple-500
@@ -28,17 +28,17 @@
                 <button class="lock text-white font-bold bg-purple-500 rounded-full px-4 py-2.5">Join Waitlist</button>
             </form>
         </div>  
-        <div class="w-1/3 mr-10"></div>
+        <div class="w-1/3 mr-10 md:w-1/2 md:p-16"></div>
       </div>
       <br>
       <br>
-    <div class="flex w-full text-center">
-        <div class="w-1/3 m-10 text-3xl font-light item-center">Friends <br><br>
-         <img src=friends.png> </div>
-        <div class="w-1/3 m-10 text-3xl font-light">Family <br><br>
-        <img src=fam.png> </div>
-        <div class="w-1/3 m-10 text-3xl font-light">Co-Workers <br><br>
-        <img src=work.png> </div>
+    <div class="md:flex w-full text-center">
+        <div class="w-1/3 m-10 md:w-full md:p-4 text-3xl font-light">Friends <br><br>
+         <img src="friends.png" class="object:center"> </div>
+        <div class="w-1/3 m-10 md:w-full md:p-4 text-3xl font-light">Family <br><br>
+        <img src="fam.png"> </div>
+        <div class="w-1/3 m-10 md:w-full md:p-4 text-3xl font-light">Co-Workers <br><br>
+        <img src="work.png"> </div>
       </div>
 
 </body>
